# ia-bioreprod2026-15

./: .gitignore  README.md  main.py  pixi.toml  pyproject.toml
.github/workflows/: ci.yml
src/figure2arepro/: __init__.py  cli.py  io.py  plot.py
tests/: test_io.py  test_plot.py
